[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menus/ButtonTypeG.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Menus/PickerTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/roboto.black.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.941176, 0.941176, 0.941176, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.8, 0.8, 0.8, 1 )

[node name="ButtonTypeG" type="HBoxContainer"]
margin_right = 472.0
margin_bottom = 56.0
focus_mode = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 187.0
margin_bottom = 56.0
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
action_mode = 0
text = "Test"
flat = true
align = 0

[node name="Entry" type="LineEdit" parent="."]
margin_left = 191.0
margin_top = 7.0
margin_right = 472.0
margin_bottom = 49.0
size_flags_horizontal = 11
size_flags_vertical = 4
size_flags_stretch_ratio = 1.5
custom_colors/selection_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/cursor_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_colors/font_color_selected = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color = Color( 0.121569, 0.121569, 0.121569, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "testtest"
align = 1
max_length = 20
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="focus_entered" from="Entry" to="." method="_on_Entry_focus_entered"]
[connection signal="focus_exited" from="Entry" to="." method="_on_Entry_focus_exited"]
[connection signal="mouse_entered" from="Entry" to="." method="_on_Entry_mouse_entered"]
[connection signal="text_changed" from="Entry" to="." method="_on_Entry_text_changed"]
[connection signal="text_entered" from="Entry" to="." method="_on_Entry_text_entered"]
